Apply Coq -> Rocq renaming in documentation files

--- a/doc/common/macros.tex
+++ b/doc/common/macros.tex
@@ -91,6 +91,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%
 
 \newcommand{\Coq}{\textsc{Coq}}
+\newcommand{\Rocq}{\textsc{Rocq}}
 \newcommand{\gallina}{\textsc{Gallina}}
 \newcommand{\Gallina}{\textsc{Gallina}}
 \newcommand{\CoqIDE}{\textsc{CoqIDE}}
