--- a/doc/stdlib/Library.tex
+++ b/doc/stdlib/Library.tex
@@ -23,9 +23,9 @@ General Public License Version 2.1.}
 \tableofcontents
 
 \newpage
-% \section*{The \Coq\ standard library}
+% \section*{The \Rocq\ standard library}
 
-This document is a short description of the \Coq\ standard library.
+This document is a short description of the \Rocq\ standard library.
 This library comes with the system as a complement of the core library
 (the {\bf Init} library ; see the Reference Manual for a description
 of this library). It provides a set of modules directly available
